--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "node derver.js",
+    "start": "node server.js",
     "start-dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
